<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/app_first_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/app_first_page_title"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/app_first_page_progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/app_first_page_developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/app_first_page_title"
        android:layout_alignEnd="@id/app_first_page_title"
        android:textSize="15sp"

        android:text="@string/app_first_page_developers" />

    <LinearLayout
        android:id="@+id/app_first_page_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/app_first_page_developers"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:id="@+id/app_first_page_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            >

            <TextView
                android:id="@+id/app_first_page_textView_username"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/app_first_page_textView_username"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/app_first_page_editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="15sp"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/app_first_page_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/app_first_page_textView_password"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/app_first_page_textView_password"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/app_first_page_editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="15sp"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/app_first_page_layout_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"

            android:gravity="center"
            >

            <Button
                android:id="@+id/app_first_page_button_login"
                android:layout_width="125dp"
                android:layout_height="wrap_content"

                android:text="@string/app_first_page_button_login_text"
                android:textColor="#FFFFFF"
                android:backgroundTint="#000000"
                android:layout_marginEnd="10dp"
            />
            <Button
                android:id="@+id/app_first_page_button_register"
                android:layout_width="125dp"
                android:layout_height="wrap_content"

                android:text="@string/app_first_page_button_register_text"
                android:textColor="#FFFFFF"
                android:backgroundTint="#000000"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/app_first_page_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_first_page_copyright"
            android:layout_marginTop="175dp"
            />

    </LinearLayout>

</RelativeLayout>