<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@drawable/gradient_orange_background"

    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/dashboard_activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_orange_background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >

        <TextView
            android:id="@+id/dashboard_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_dashboard_activity_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_grey_background"
        android:orientation="vertical"
        android:layout_below="@id/dashboard_activity_header"

        android:padding="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <TextView
                android:id="@+id/app_dashboard_activity_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/app_dashboard_activity_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/app_dashboard_activity_card_type"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
            >
                <TextView
                    android:id="@+id/app_dashboard_activity_card_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"

        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/app_dashboard_activity_send_money_container">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/app_dashboard_activity_IBAN">
            </TextView>

            <EditText
                android:id="@+id/app_dashboard_activity_editText_IBAN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/app_dashboard_activity_amount">
            </TextView>

            <EditText
                android:id="@+id/app_dashboard_activity_editText_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

        <Button
            android:id="@+id/app_dashboard_activity_button_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_dashboard_activity_send_money"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000"
            >

        </Button>

    </LinearLayout>


</LinearLayout>